done with assignment

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Your code here -->
     <div id="main">
 
-
+<!-- image div goes here -->
       <div class="img">
         <img 
           src="./img/img1.jpg"
